--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -1,9 +1,14 @@
-<center>
-    <h1>You have chosen</h1>
-    <h2>{{ month }}</h2>
-    <h2>{{ year }}</h2>
+{% extends 'base.html' %}
+{% block content %}
 
-    <h3>{{ cal | safe }}</h3>
+    <center>
+        <h1 class="my-3">You have chosen</h1>
+        <h2>{{ month }}</h2>
+        <h2>{{ year }}</h2>
 
-    <p>The current year is {{ current_year }}</p>
-</center>
+        <p class="my-3">{{ cal | safe }}</p>
+
+        <p>The current year is {{ current_year }}</p>
+    </center>
+
+{% endblock %}
