--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,4 @@
 
-{% url 'home' as home_url %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,6 +24,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'events-list' %}">Events</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -42,6 +43,10 @@
                 {% block content %}
                 <!-- Calendar -->
                 {% endblock content %}
+
+                {% block eventlist %}
+                <!-- Event List -->
+                {% endblock eventlist %}
 
             </div>
         </div>
