--- a/templates/base.html
+++ b/templates/base.html
@@ -37,9 +37,10 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'add-event' %}">Add Event</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="d-flex" role="search" method="POST" action="{% url 'search-venues' %}">
+              {% csrf_token %}
+              <input class="form-control me-2" type="search" placeholder="Search venues" aria-label="Search" name="searched">
+              <button class="btn btn-outline-light" type="submit">Search</button>
             </form>
           </div>
         </div>
