Add update venue functionality in UI

--- a/events/templates/events/show_venue.html
+++ b/events/templates/events/show_venue.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="card text-center my-5">
+<div class="card text-white bg-dark text-center my-5">
     <div class="card-header">
         {{ venue }}
     </div>
