Adjust bootstrap styling and alignment

--- a/events/templates/events/add_event.html
+++ b/events/templates/events/add_event.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block addevent %}
 
-    <center>
+<div class="w-100 text-center">
         <h1 class="mt-5">Add event</h1>
 
         {% if submitted %}
@@ -23,7 +23,6 @@
             </form>
 
         {% endif %}
-        
-    </center>
+</div>
 
 {% endblock %}
