--- a/events/templates/events/add_venue.html
+++ b/events/templates/events/add_venue.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block addvenue %}
 
-    <center>
+    <div class="w-100 text-center">
         <h1 class="mt-5">Add venue</h1>
 
         {% if submitted %}
@@ -23,7 +23,8 @@
             </form>
 
         {% endif %}
+
+    </div>
         
-    </center>
 
 {% endblock %}
