--- a/events/templates/events/events_list.html
+++ b/events/templates/events/events_list.html
@@ -4,7 +4,7 @@
 <h1>Events</h1>
 
 {% for event in event_list %}
-<div class="card text-center my-5">
+<div class="card text-center my-2 w-100">
     <div class="card-header">
         {{ event }}
     </div>
