--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 
     <section class="container">
         <div class="row my-5">
-            <div class="col-6 mx-auto">
+            <div class="col-6 mx-auto d-flex flex-column justify-content-center align-items-center">
 
                 {% block content %}
                 <!-- Calendar -->
